--- a/HTMLForm.html
+++ b/HTMLForm.html
@@ -8,13 +8,13 @@
     </head>
     <body>
         <div class="container">
-            <form method="POST" action="">
+            <form method="POST" action="insert.php">
                 <h2></h2>
-                : <input type="date" class="form-control form-control-lg" placeholder="Visit Date" name="visitDate"/><br>
-                : <input type="time" class="form-control form-control-lg" placeholder="Visit Time" name="visitTime"/><br>
-                : <input type="text" class="form-control form-control-lg" placeholder="Doctor ID" name="doctorid"/><br>
-                : <input type="text" class="form-control form-control-lg" placeholder="Patient ID" name="patientid"/><br>
-                : <input type="text" class="form-control form-control-lg" placeholder="Cost" name="cost"/><br>
+               UserID: <input type="text" class="form-control form-control-lg" placeholder="User ID" name="userID"/><br>
+                Name: <input type="text" class="form-control form-control-lg" placeholder="Name" name="name"/><br>
+                Email: <input type="text" class="form-control form-control-lg" placeholder="Email" name="email"/><br>
+                Username: <input type="text" class="form-control form-control-lg" placeholder="Username" name="username"/><br>
+                Password: <input type="text" class="form-control form-control-lg" placeholder="Password" name="password"/><br>
                 <input type="submit" class="form-control form-control-lg">
             </form>
         </div>
