--- a/HTMLForm.html
+++ b/HTMLForm.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-      <title>HTML Form</title>
+      <title>User Registration Form</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -10,7 +10,6 @@
         <div class="container">
             <form method="POST" action="insert.php">
                 <h2></h2>
-               UserID: <input type="text" class="form-control form-control-lg" placeholder="User ID" name="userID"/><br>
                 Name: <input type="text" class="form-control form-control-lg" placeholder="Name" name="name"/><br>
                 Email: <input type="text" class="form-control form-control-lg" placeholder="Email" name="email"/><br>
                 Username: <input type="text" class="form-control form-control-lg" placeholder="Username" name="username"/><br>
