Added Login and Updated HTML

--- a/HTMLForm.html
+++ b/HTMLForm.html
@@ -14,6 +14,16 @@
                 Email: <input type="text" class="form-control form-control-lg" placeholder="Email" name="email"/><br>
                 Username: <input type="text" class="form-control form-control-lg" placeholder="Username" name="username"/><br>
                 Password: <input type="text" class="form-control form-control-lg" placeholder="Password" name="password"/><br>
+                <div class="checkbox">
+                <label><input type="checkbox" name="over18">Select if Over 18</label>
+                <label for="size">Family Size</label>
+
+                <select name="size" id="size">
+                <option value="size1">1+</option>
+                <option value="size2">3+</option>
+                <option value="size3">5+</option>
+                <option value="size4">7+</option>
+        </select>
                 <input type="submit" class="form-control form-control-lg">
             </form>
         </div>
