--- a/HTMLForm2.html
+++ b/HTMLForm2.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-      <title>User Registration Form</title>
+      <title>Login</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -8,10 +8,8 @@
     </head>
     <body>
         <div class="container">
-            <form method="POST" action="insert.php">
+            <form method="POST" action="login.php">
                 <h2></h2>
-                Name: <input type="text" class="form-control form-control-lg" placeholder="Name" name="name"/><br>
-                Email: <input type="text" class="form-control form-control-lg" placeholder="Email" name="email"/><br>
                 Username: <input type="text" class="form-control form-control-lg" placeholder="Username" name="username"/><br>
                 Password: <input type="text" class="form-control form-control-lg" placeholder="Password" name="password"/><br>
                 <input type="submit" class="form-control form-control-lg">
